to cahnge teachers name

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
         <div class="sction">
         <div class="faculty">
             <h2>Our Faculty</h2>
-            <a href="#">Mr.Massod Shah</a>
-            <a href="#">Dr.Walid Haider</a>
-            <a href="#">Prof.Dr.Ajmal</a>
-            <a href="#">Dr.Ruedar</a>
+            <a href="#">Mr.Nazya</a>
+            <a href="#">Mr.Mazar</a>
+            <a href="#">Mr.Hafsa</a>
+            <a href="#">Mr.Seemab</a>
         </div>
         <div class="campuses">
             <h2>Our Campuses</h2>
